[package]
name = "zilch"
version = "0.1.0"
authors = ["Hiroki Kumamoto <kumabook@live.jp>"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

license = "MIT"
homepage = "https://github.com/kumabook/zilch"
repository = "https://github.com/kumabook/zilch.git"
description = ""
keywords = []
categories = []

[[bin]]
name = "download"
path = "src/main.rs"

[dependencies]
serde            = "^1"
serde_derive     = "^1"
serde_json       = "^1"
html5ever        = "^0.16.0"
hyper            = "^0"
hyper-native-tls = "^0"
mecab            = "^0"
csv              = "^0"
pink_spider      = { git = "https://github.com/kumabook/pink-spider.git" }
